<resources>
    <string name="app_name">TodoList</string>
    <string-array name="custom_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>

    <string name="modify">수정하기</string>
    <string name="remove">삭제하기</string>
    <string name="timeToolbarName">시간 알람</string>
    <string name="selectTime">오전/오후</string>
    <string name="hour">시</string>
    <string name="minute">분</string>
    <string name="done">완료</string>
    <string name="AM">오전</string>
    <string name="PM">오후</string>
    <string name="setTime">시간 설정</string>
</resources>