<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.AlarmPlusFragment"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:orientation="vertical"
    android:background="@drawable/alarm_plus_fragment_background"
    app:behavior_hideable="true">

    <ImageView
        android:id="@+id/btnTimeSetDrawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:src="@drawable/bottom_dialog_drawer_button" />

    <TextView
        android:id="@+id/tvTimeSetTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setTime"
        android:textColor="@color/white"
        android:textStyle="bold|normal"
        android:gravity="center|top"
        android:paddingBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:id="@+id/selectDayNight"
        android:background="@color/deep_gray"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textStyle="bold|normal"
            android:text="@string/selectTime"
            android:gravity = "center_vertical"
            android:paddingStart="20dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_dialog_drawer_choice_button"
                android:text="@string/AM"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnPM"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_dialog_drawer_choice_button"
                android:text="@string/PM"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnAM"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:id="@+id/selectHour"
        android:background="@color/deep_gray"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hour"
            android:textColor="@color/white"
            android:textStyle="bold|normal"
            android:paddingTop="20dp"
            android:paddingStart="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hourContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:id="@+id/selectMinute"
        android:background="@color/deep_gray"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minute"
            android:textColor="@color/white"
            android:textStyle="bold|normal"
            android:paddingTop="20dp"
            android:paddingStart="20dp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/minuteContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonConatiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/done"
            android:textSize="20sp"
            android:textStyle="bold|normal"
            android:textColor="@color/white"
            android:background="@drawable/bottom_dialog_drawer_choice_button"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </LinearLayout>

</LinearLayout>